tests/compile_fail/013_property_access_wrong_type.vox
a text called "name" is "hello".
Print name's length.
